<resources>
    <string name="app_name">BADSHA HANDICAPPER TIPS</string>
    <string name="name">Badsha Professional Handicapper\n Indian Race Tips</string>
    <string name="loading">Loading....</string>
    <string name="contact_us_details">About Us \n


Badsha Race Tips \n

Home \n
Center \n
Archives \n
Race Card \n
Track Work \n
Scale Rating \n
Speed Rating \n
Bend Position Rating \n
Media Choices \n
Best Tips \n
BADSHA HANDICAPPER CHOICES \n
Results \n
Query/Feed back \n
Privacy Policy \n
Terms and Conditions \n
Guidelines \n


<b>About Us</b>\n

BADSHA PROFESSIONAL HANDICAPPER – Badsha has been one of the most trusted names in Horse Racing and tipping for over a decade. He has a simple rule. The punter must go home with more than he entered the betting ring. With this philosophy, he has managed to make thousands of punters richer with his accurate race analysis and handicapping. He now comes out with the mobile app to make the same advice available to the national audience. The application is managed by Badsha and his committed and highly professional team who uses the best scientific tools to come out with the best choice of horse to bet on for win, place, SHP, THP and jackpot. The complete process is overseen and managed by Badsha personally and the Speed Rating Algorithm is managed by Amitabh Dutta. The app has been developed by Tara Web Studio in collaboration with Hamiters, Hyderabad under the strict supervision of Badsha. \n
All information and data provided herein this mobile App BADSHA PROFESSIONAL HANDICAPPER is for reference purpose only. BADSHA HANDICAPPER make no representation or warranty of any kind regarding data on this Mobile App Services nor the data and information published or referred to on each pages associated with this App. Also note videos are the properties of the respective clubs. BADSHA only gives a link to the respective race club’s websites or to the one which are available in public domain. Videos will play only if they are in compatible form. BADSHA Tips subscription doesn’t includes Videos. The Videos and its availability is not guaranteed by us. \n

CONTACT: \n
EMAIL: support@papadsanjay5555.com \n
WHAT DO YOU GET WITH THE DIAMOND PLAN \n

1) RACE CARD: Day card details with last run details and the video of the last run if available. \n

2) TRACKWORK: Track work of the horse after his last run till the date of the race. \n

3) BADSHA CHOICE: Race wise choice of BADSHA including WIN, SHP, THP.TANALA, JACKPOT PICKS. \n

4) BEST BETS: This page will offer Days Best, Good Double, Good Place, Lay bet, Treble and Jackpot. \n

5) MEDIA TIPS: The tips from all major media outlets covering racing including the major blog sites. \n

6) SPEED RATING: The selection here are based on a proprietary algorithm created by Badsha Professional Handicapper team and Mr. Amitabh Dutta. \n

7) SCALE RATING \n
The difference between the top weight horse and the bottom weight horse is called the scale and has a huge significance on how to read the race card. For instance, if the scale of the race is very wide with the top weight at 62 kgs and bottom weight at 45 kgs, the horses carrying the flyweight on their backs have a higher chance of winning even if they are not as prodigious as the top weight horses. If the scale is small, then the weight differential is lesser and only applies to the line through which the horses have run together in the past. In short, scale analysis helps you decipher the effect of the weight the horse is carrying. We will help you take informed decision with regards to the chances that a horse has based on the weight it s carrying. \n

8) SPEED RATING \n
Most punters are confused on how to compare two horses which have run at different weights under different conditions with different jockeys because all these factors affect the final position of the horse. Thus a horse carrying 60 kgs will travel slower than a horse traveling at 55 kgs. It’s easier to run on hard ground than soft ground. So how can you compare two horses? With our proprietary algorithm, we put values for all these variables, factoring in weight, jockeys and trainers abilities, and condition of the ground, wind speed, length of the straight, and distance from the rails etc. to arrive at a figure that you can use to easily compare two horses. This figure can help you select between all the possible horses and make an efficient decision on your betting. \n

9) BEND POSITION ANALYSIS \n
The bend position is a major contributor to the ability of the horse in winning a race. When we analyse the chances of a horse winning a race, we have to look at the aerodynamics of horse racing. Horses which hit the bend early find it easier to navigate the turn unless a backmarker can get an opening through the bunch ahead. On the other hand, in order to hit the bend early, the horse has to expend more energy making it vulnerable in the straight if it cannot get the necessary wind to overhaul the final stages. Therefore most long distance races, the clever jockey will position his horse in the pace so that it does not have to face the air resistance when turning 3 or 4 deep. We will help you understand when the horse is probable to hit the bend and how does that affect its chances in the race. \n

10) RESULT: The result will be displayed only after being officially announced by the club’s website or announced at race course board. \n







Guidelines \n

WIN: The Horse should finish FIRST. \n

SECOND HORSE POOL (SHP): The Horse should finish SECOND. \n

THIRD HORSE POOL (THP): The Horse should finish THIRD. \n

PLACE: The Horse should finish in FIRST TWO. (If 7 runner) \n

The Horse should finish in FIRST THREE. (If above 7 runner) \n

TANALA: The Horse should finish 1-2-3 or 2-3-1 or 3-2-1. (Any order from 1 to 3) \n

JACKPOT: Select WINNER Horse of nominated 5 Races by club. \n
We will provide you with the best selections for the Jackpot ticket and the price of the same. \n</string>
    <string name="RaceCard"><u>Race Card</u></string>
    <string name="ScaleRating"><u>Scale Rating</u></string>
    <string name="SpeedRating"><u>Speed Rating</u></string>
    <string name="BendPositionRating"><u>Bend Position Rating</u></string>
    <string name="BestTips"><u>Day Best Horse</u></string>
    <string name="BADSHAHANDICAPPERCHOICES1"><u>BADSHA HANDICAPPER CHOICES</u></string>
    <string name="Results"><u>Results</u></string>
    <string name="Eatingbets"><u>Eating Bets</u></string>
    <string name="Videos">VIDEOS</string>
</resources>