<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">


<androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
       app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_cardname"
                android:text="BAN"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:visibility="visible"
                android:layout_marginTop="20dp"
                />


             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_date"
                android:text="2020-10-12"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp"
                android:layout_below="@+id/txt_cardname"
                 />



            <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txt_cardname"
        android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
                android:id="@+id/layout111">

       <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
           android:id="@+id/layout1">

              <TextView
                  android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_RaceCard"
                android:text="@string/RaceCard"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:visibility="visible"
                />

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_ScaleRating"
                android:text="@string/ScaleRating"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:visibility="visible"
               android:layout_toRightOf="@+id/txt_RaceCard"
               android:layout_marginLeft="4dp"
                />
    </RelativeLayout>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/layout2"
           android:layout_below="@+id/layout1"
           android:layout_marginTop="5dp">

              <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_SpeedRating"
                android:text="@string/SpeedRating"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:visibility="visible"
                />

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_bpr"
                android:text="@string/BendPositionRating"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:visibility="visible"
               android:layout_toRightOf="@+id/txt_SpeedRating"
               android:layout_marginLeft="4dp"
                />
    </RelativeLayout>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/layout3"
           android:layout_below="@+id/layout2"
           android:layout_marginTop="5dp">

              <TextView
                  android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_BestTips"
                android:text="@string/BestTips"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:visibility="visible"
                />

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_BADSHAHANDICAPPERCHOICES"
                android:text="@string/BADSHAHANDICAPPERCHOICES1"
                android:textColor="@color/orange"
                android:textSize="12dp"
                android:visibility="visible"
               android:layout_toRightOf="@+id/txt_BestTips"
               android:layout_marginLeft="4dp"
                />
    </RelativeLayout>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:id="@+id/layout4"
           android:layout_below="@+id/layout3">

           <TextView
               android:id="@+id/txt_Results"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/Results"
               android:textColor="@color/black"
               android:textSize="12dp"
               android:visibility="visible" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/txt_video"
               android:text="@string/Videos"
               android:textColor="@color/black"
               android:textSize="12dp"
               android:visibility="visible"
               android:layout_toRightOf="@+id/txt_Results"
               android:layout_marginLeft="4dp"
               />

    </RelativeLayout>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:id="@+id/layout5"
           android:layout_below="@+id/layout4"
           android:layout_marginBottom="5dp">

           <TextView
               android:id="@+id/txt_eatingbets"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/Eatingbets"
               android:textColor="@color/black"
               android:textSize="12dp"
               android:visibility="visible" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/Videos"
               android:textColor="@color/black"
               android:textSize="12dp"
               android:visibility="gone"
               android:layout_toRightOf="@+id/txt_eatingbets"
               android:layout_marginLeft="4dp"
               />

    </RelativeLayout>

    </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>